// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic text 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

abbr.c2 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c2 {
  font-style: italic;
}

kbd.c2 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c2 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c2 {
  font-weight: bold;
}

sub.c2,
sup.c2 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c2,
u.c2 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c2,
cite.c2,
var.c2,
em.c2 {
  font-style: italic;
}

kbd.c2,
pre.c2,
samp.c2 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

<div
  class="c0 c1"
>
  <span
    class="c2 c1"
  >
    test
  </span>
</div>
`;

exports[`renders correctly for text with a another element 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #112ebb !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

abbr.c2 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c2 {
  font-style: italic;
}

kbd.c2 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c2 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c2 {
  font-weight: bold;
}

sub.c2,
sup.c2 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c2,
u.c2 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c2,
cite.c2,
var.c2,
em.c2 {
  font-style: italic;
}

kbd.c2,
pre.c2,
samp.c2 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

<div
  class="c0 c1"
>
  <strong
    class="c2 c3"
    color="primary"
  >
    test
  </strong>
</div>
`;

exports[`renders correctly for text with a color 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #112ebb !important;
}

.c0 {
  box-sizing: border-box;
  font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Fira Sans', 'Droid Sans','Helvetica Neue',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: inherit;
}

.c0 *:focus {
  outline: 2px solid #112ebb;
  outline-offset: 2px;
}

abbr.c2 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c2 {
  font-style: italic;
}

kbd.c2 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c2 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c2 {
  font-weight: bold;
}

sub.c2,
sup.c2 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c2,
u.c2 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c2,
cite.c2,
var.c2,
em.c2 {
  font-style: italic;
}

kbd.c2,
pre.c2,
samp.c2 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

<div
  class="c0 c1"
>
  <span
    class="c2 c3"
    color="primary"
  >
    test
  </span>
</div>
`;
